# ChangeLog for games-emulation/raine
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/raine/ChangeLog,v 1.21 2008/05/08 21:58:55 mr_bones_ Exp $

  08 May 2008; Michael Sterrett <mr_bones_@gentoo.org> raine-0.50.7.ebuild:
  never try to run nasmw

  08 May 2008; Michael Sterrett <mr_bones_@gentoo.org> raine-0.50.7.ebuild:
  stable for x86

*raine-0.50.7 (05 Feb 2008)

  05 Feb 2008; Michael Sterrett <mr_bones_@gentoo.org> +raine-0.50.7.ebuild:
  version bump

*raine-0.50.6 (11 Jan 2008)

  11 Jan 2008; Michael Sterrett <mr_bones_@gentoo.org> +raine-0.50.6.ebuild:
  version bump

  02 Oct 2007; Christian Faulhammer <opfer@gentoo.org> raine-0.50.5.ebuild:
  stable x86, bug 192909; adding media-libs/sdl-image and media-libs/sdl-ttf
  as DEPEND

*raine-0.50.5 (12 Aug 2007)

  12 Aug 2007; Michael Sterrett <mr_bones_@gentoo.org> +raine-0.50.5.ebuild:
  version bump

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*raine-0.43.4 (11 Sep 2006)

  11 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org> +raine-0.43.4.ebuild:
  version bump

*raine-0.43.2.1 (03 May 2006)

  03 May 2006; <Tupone@gentoo.org> +raine-0.43.2.1.ebuild:
  Version bump, bug #106209 by Michael Duncan

  16 Sep 2005; Michael Sterrett <mr_bones_@gentoo.org> raine-0.39.0.ebuild:
  needs app-arch/unzip; tidy

*raine-0.42.4 (21 Jul 2005)

  21 Jul 2005; Michael Sterrett <mr_bones_@gentoo.org> +raine-0.42.4.ebuild:
  version bump

*raine-0.42.2 (03 Jun 2005)

  03 Jun 2005; Michael Sterrett <mr_bones_@gentoo.org> +raine-0.42.2.ebuild:
  version bump

*raine-0.42.0 (29 Nov 2004)

  29 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org> +raine-0.42.0.ebuild:
  version bump

  01 Sep 2004; Michael Sterrett <mr_bones_@gentoo.org> -raine-0.36.2.ebuild:
  clean older ebuild

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> raine-0.36.2.ebuild,
  raine-0.39.0.ebuild: