@@ -1,6 +1,11 @@
 # ChangeLog for games-emulation/raine
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/raine/ChangeLog,v 1.21 2008/05/08 21:58:55 mr_bones_ Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/raine/ChangeLog,v 1.22 2009/07/29 04:05:16 mr_bones_ Exp $
+
+*raine-0.51.5 (29 Jul 2009)
+
+  29 Jul 2009; Michael Sterrett <mr_bones_@gentoo.org> +raine-0.51.5.ebuild:
+  version bump
 
   08 May 2008; Michael Sterrett <mr_bones_@gentoo.org> raine-0.50.7.ebuild:
   never try to run nasmw
